# boids-tests

./: CMakeLists.txt  CMakelists.txt  README.md  main.cpp
assets/: circles.frag
